--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,33 @@ body {
     padding: 150px 0;
     border-radius: 0;
 }
-
+.img-cover {
+    height: 100%;
+    object-fit: cover;
+}
+.rounded-10px {
+    border-radius: 10px;
+}
+.bg-light-dark {
+    background-color: #f0f0f0;
+}
+.bg-primary-dark {
+    background-color: #094b91;
+}
+.bg-warning-dark {
+    background-color: #a07c10;
+}
+.form-label-group input:not(:placeholder-shown) {
+    padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
+    padding-bottom: calc(var(--input-padding-y) / 3);
+  }
+  
+  .form-label-group input:not(:placeholder-shown) ~ label {
+    padding-top: calc(var(--input-padding-y) / 3);
+    padding-bottom: calc(var(--input-padding-y) / 3);
+    font-size: 12px;
+    color: #777;
+  }
 @media (max-width: 575px) {
     .jumbotron{
         padding: 100px 0;
